# cough_detect

./: .gitignore  C++_ENGINE_README.md  COUGH_DETECTION_IMPROVEMENTS.md  LOGGING_ENHANCEMENT_SUMMARY.md  PROJECT_OVERVIEW.md  QUICKSTART.md  QUICKSTART_C++_ENGINE.md  README.md  REFACTORING_SUMMARY.md  REFACTOR_SUMMARY.md  TENSORFLOW_LITE_INTEGRATION.md  USAGE_GUIDE.md  YAMNET_INTEGRATION.md  build.gradle.kts  build_native.sh  compile_commands.json  gradle.properties  local.properties  settings.gradle.kts
.cache/clangd/index/: audio_recorder.cpp.3E5A617E5B80AE0E.idx  audio_recorder.h.FFFDA4832E5DD7C3.idx  cough_detect_engine.cpp.C61BBA4CA8A1E096.idx  cough_detect_engine.h.9450BDA1A135391A.idx  jni_interface.cpp.B5D322246A062075.idx  jni_interface.h.F5F6BAAA2A995F29.idx  tensorflow_wrapper.cpp.616D801AA2F00816.idx  tensorflow_wrapper.h.B0892D660C83852E.idx
.claude/: settings.local.json
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/org/voiddog/coughdetect/: CoughDetectionUITest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: README_MODEL.md  model_info.txt
app/src/main/cpp/: CMakeLists.txt  audio_recorder.cpp  cough_detect_engine.cpp  jni_interface.cpp  tensorflow_wrapper.cpp
app/src/main/cpp/include/: audio_recorder.h  cough_detect_engine.h  jni_interface.h  tensorflow_wrapper.h
app/src/main/java/org/voiddog/coughdetect/: MainActivity.kt
app/src/main/java/org/voiddog/coughdetect/audio/: AudioPlayer.kt  AudioRecorder.kt
app/src/main/res/mipmap-xhdpi/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml
(+21 files in other folders)
